--- a/src/login.css
+++ b/src/login.css
@@ -3,6 +3,12 @@
         margin: 0 !important;
         padding: 0 !important;
     }
+    .login-bg-coloration{
+        position: relative;
+        height: 100vh;
+        width: 100vw;
+        background: conic-gradient(from 168.65deg at 50% 50%, #35CD8B 0deg, rgba(255, 255, 255, 0) 187.41deg, #35CD8B 360deg), #FFFFFF;
+    }
     .login-nav-bar{
         position: absolute;
         height: 50px;
@@ -20,14 +26,14 @@
         left: 20px;
         top: 7px;
 
-        filter: invert(40%) sepia(74%) saturate(368%) hue-rotate(101deg) brightness(94%) contrast(91%)
+        filter: invert(40%) sepia(74%) saturate(368%) hue-rotate(101deg) brightness(94%) contrast(91%);
     }
     .vacctrack-title-login{
         position: absolute;
         width: 180px;
         height: 32px;
         left: 60px;
-        top: 6px;
+        top: 5px;
 
         font-family: 'PT Sans', sans-serif;
         color: black;
@@ -35,5 +41,394 @@
         font-weight: bold;
         font-size: 30px;
         line-height: 39px;        
+        transition: 0.35s ease-in-out;
+    }
+    .vacctrack-title-login:hover{
+        color: #2A875E;
+    }
+    .login-about-us-button{
+        position: absolute;
+        width: 140px;
+        height: 33px;
+        right: 36.5px;
+        top: 6px;
+
+        background: #FFFFFF;
+        font-family: 'Public Sans', sans-serif;
+        font-weight: 600;
+        font-size: 20px;
+        border: 3px solid #2A875E;
+        box-sizing: border-box;
+        border-radius: 34px;
+        outline: none;
+        transition: 0.35s ease-in-out;
+    }
+    .login-inventory-button{
+        position: absolute;
+        width: 140px;
+        height: 33px;
+        right: 187.5px;
+        top: 6px;
+        
+        background: #FFFFFF;
+        font-family: 'Public Sans', sans-serif;
+        font-weight: 600;
+        font-size: 20px;
+        border: 3px solid #2A875E;
+        box-sizing: border-box;
+        border-radius: 34px;
+        outline: none;
+        transition: 0.35s ease-in-out;
+    }
+    .login-about-us-button:hover{
+        background: #2A875E;
+        color: white;
+    }
+    .login-inventory-button:hover{
+        background: #2A875E;
+        color: white;
+    }
+    /*Login Form Section*/
+    .login-form-bg{ 
+        position: absolute;
+        width: 468px;
+        height: 600px;
+        left: calc(50% - 950px/2 + 0.5px);
+        top: 100px;
+
+        background: #2A875E;
+        border-radius: 75px;
+    }
+    #login-form-platform{
+        position: absolute;
+        width: 468px;
+        height: 600px;
+        left: calc(50% - 468px/2 + 20.5px);
+        top: -15px;
+
+        background: white;
+        border: 3px solid #2A875E;
+        box-sizing: border-box;
+        border-radius: 75px;
+    }
+    .medical-portal-text{
+        position: absolute;
+        width: 323px;
+        height: 50px;
+        left: calc(50% - 383px/2 + 8px);
+        top: 30px;
+
+        font-family: 'Public Sans', sans-serif;
+        text-shadow: 1px 0 0 #000000, -1px 0 0 #000000, 0 1px 0 #000000, 0 -1px 0 #000000, 1px 1px #000000, -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 47px;
+        text-align: center;
+        color: #2A875E;
+    }
+    .medical-user-vector{
+        position: absolute;
+        width: 25px;
+        height: 32px;
+        left: calc(50% - 20px/2 + 130px);
+        top: 20px;
+
+        filter: invert(40%) sepia(74%) saturate(368%) hue-rotate(101deg) brightness(94%) contrast(91%);
+        animation: bobblingvector 1.5s linear infinite;
+    }
+        @keyframes bobblingvector {
+            0%, 100%{
+                transform: translateY(0);
+            }
+            50%{
+                transform: translateY(-6px);
+            }
+        }
+    .login-sub-text{
+        position: absolute;
+        width: 385px;
+        height: 58px;
+        left: calc(50% - 415px/2 + 10px);
+        top: 77px;
+
+        font-family: 'PT Sans', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 26px;
+        text-align: center;
+        color: black;
+    }
+    .login-form-divider{
+        position: absolute;
+        left: 6.62%;
+        right: 7.71%;
+        top: 140px;
+        height: 2px;
+
+        border-width: 0;
+        background-color: #258A5E;
+    }
+    /*Login Form Inputs portion*/
+    #login-form{/*Just a Label*/} 
+    #login-form input[type="text"]{
+        font-family: 'PT Sans', sans-serif;
+        font-weight: 400;
+        font-size: 15px;
+        height: 27px;
+        width: 335px;
+        position: absolute;
+        left: 40px;
+        top: 1px;
+        color: black;
+        border: none;
+        border-color: transparent;
+        outline: none;
+    }
+    #login-form input[type="password"]{
+        font-family: 'PT Sans', sans-serif;
+        font-weight: 400;
+        font-size: 15px;
+        height: 27px;
+        width: 335px;
+        position: absolute;
+        left: 40px;
+        top: 1px;
+        border: none;
+        border-color: transparent;
+        outline: none;
+    }
+    .id-code-label{
+        position: absolute;
+        width: 182px;
+        height: 24px;
+        left: calc(50% - 400px/2 + 20px);
+        top: 180px;
+
+        font-family: 'PT Sans', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 19px;
+        color: #716F6F;
+    }
+    .id-code-field{
+        position: absolute;
+        width: 389px;
+        height: 32px;
+        left: calc(50% - 871px/2 + 22px);
+        top: 290px;
+
+        background: white;
+        border: 2px solid #2A875E;
+        box-sizing: border-box;
+        border-radius: 20px;
+    }
+    .med-id-vector{
+        position: absolute;
+        width: 23px;
+        height: 23px;
+        left: calc(50% - 23px/2 - 168px);
+        top: 207px;
+
+        filter: invert(40%) sepia(74%) saturate(368%) hue-rotate(101deg) brightness(94%) contrast(91%);
+        z-index: 1;
+    }
+    .username-label{
+        position: absolute;
+        width: 182px;
+        height: 24px;
+        left: calc(50% - 400px/2 + 20px);
+        top: 280px;
+
+        font-family: 'PT Sans', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 19px;
+        color: #716F6F;
+    }
+    .username-field{
+        position: absolute;
+        width: 389px;
+        height: 32px;
+        left: calc(50% - 871px/2 + 22px);
+        top: 390px;
+
+        background: white;
+        border: 2px solid #2A875E;
+        box-sizing: border-box;
+        border-radius: 20px;
+    }
+    .username-vector{
+        position: absolute;
+        width: 23px;
+        height: 23px;
+        left: calc(50% - 23px/2 - 168px);
+        top: 307px;
+
+        filter: invert(40%) sepia(74%) saturate(368%) hue-rotate(101deg) brightness(94%) contrast(91%);
+        z-index: 1;
+    }
+    .password-label{
+        position: absolute;
+        width: 182px;
+        height: 24px;
+        left: calc(50% - 400px/2 + 20px);
+        top: 380px;
+
+        font-family: 'PT Sans', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 19px;
+        color: #716F6F;
+    }
+    .password-field{
+        position: absolute;
+        width: 389px;
+        height: 32px;
+        left: calc(50% - 871px/2 + 22px);
+        top: 490px;
+
+        background: white;
+        border: 2px solid #2A875E;
+        box-sizing: border-box;
+        border-radius: 20px;
+    }
+    .key-vector{
+        position: absolute;
+        width: 23px;
+        height: 23px;
+        left: calc(50% - 23px/2 - 168px);
+        top: 406px;
+
+        filter: invert(40%) sepia(74%) saturate(368%) hue-rotate(101deg) brightness(94%) contrast(91%);
+        z-index: 1;
+    }
+    .login-bottom-text{
+        position: absolute;
+        width: 286px;
+        height: 58px;
+        left: calc(50% - 340px/2 + 22.5px);
+        top: 460px;
+
+        font-family: 'PT Sans', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 19px;
+        text-align: center;
+        color: #716F6F;
+    }
+    .login-signalling{
+        position: absolute; 
+        width: 15px;
+        height: 15px;
+        left: calc(50% - 85px/2 + 0.5px);
+        top: 235px;
+
+        background: #FFFFFF;
+        border: 1px solid #2A875E;
+        box-sizing: border-box;
+    }
+    .login-submit-button{
+        position: absolute;
+        width: 144px;
+        height: 32px;
+        left: calc(50% - 626px/2 - 65.5px);
+        top: 631px;
+
+        font-family: 'PT Sans', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 17px;
+        color: black;
+        text-align: center;
+        background: white;
+        border: 2px solid #2A875E;
+        box-sizing: border-box;
+        border-radius: 20px;
+        outline: none;
+        transition: 0.35s ease-in-out;
+    }
+    .login-reset-button{
+        position: absolute;
+        width: 144px;
+        height: 32px;
+        left: calc(50% - 492px/2 + 40.5px);
+        top: 631px;
+
+        font-family: 'PT Sans', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 17px;
+        color: black;
+        text-align: center;
+        background: white;
+        border: 2px solid #2A875E;
+        box-sizing: border-box;
+        border-radius: 20px;
+        outline: none;
+        transition: 0.35s ease-in-out;
+    }
+    .login-submit-button:hover{
+        background: #2A875E;
+        color: white;
+    }
+    .login-reset-button:hover{
+        background: #2A875E;
+        color: white;
+    }
+    /*SIDE TEXT*/
+    .side-text-container{
+        position: absolute;
+        width: 444px;
+        height: 563px;
+        top: 110px;
+        left: calc(50% - 444px/2 + 263.5px);
+
+        background: transparent;
+    }
+    .h1-login{
+        position: absolute;
+        top: 70px;
+        left: calc(50% - 655px/2 + 100px);
+        height: 421px;
+        width: 450px;
+
+        font-family: 'Public Sans', sans-serif;
+        background-image: url('Images/frontliner.gif');
+        background-position: center center;
+        color: transparent;
+        -moz-background-clip: text;
+        -webkit-background-clip: text;
+        background-size: cover;
+        font-size: 55px;
+        font-style: normal;
+        font-weight: bolder;
+        line-height: 59px;
+        text-align: center;
+    }
+    .first-line{
+        position: absolute;
+        left: 6.62%;
+        right: 7.71%;
+        top: 40px;
+        height: 3px;
+
+        border-width: 0;
+        background-color: #258A5E;
+    }
+    .second-line{
+        position: absolute;
+        left: 6.62%;
+        right: 7.71%;
+        top: 510px;
+        height: 3px;
+
+        border-width: 0;
+        background-color: #258A5E;
     }
 }
